Fixed Downshift inputValue issue.

--- a/components/DataSetBrowser/DataSetBrowser.css
+++ b/components/DataSetBrowser/DataSetBrowser.css
@@ -28,11 +28,13 @@
 }
 
 .data-set-browser__input {
+	width: 100%;
+	padding: var(--spacing-sm) var(--spacing-xs);
 	border-top: none;
 	border-left: none;
 	border-right: none;
 	border-bottom: 1px solid var(--colour-primary-50);
-	width: 100%;
+	font-size: var(--font-size-sm);
 
 	&:focus {
 		outline-width: 0;
@@ -40,6 +42,10 @@
 		margin-bottom: -1px;
 		box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.075),
 			0 0 0 3px var(--colour-primary-50);
+	}
+
+	&::placeholder {
+		color: var(--colour-grey-light);
 	}
 }
 
